agrego página producto

--- a/producto.html
+++ b/producto.html
@@ -48,77 +48,36 @@
 
     <main>
 
-        <div class="bannerInicio">
-            <img src="./img/bannerEscudo.png" alt="">
-        </div>
-
-        <section >
-            <h1>¡Bienvenidos a Tienda Sacachispas Fútbol!</h1>
-            <section class="productos">
-            <article class="item">
-                <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+        <section class="detalle-producto">
+                <article class="detalle-producto-item">
+                    <img src="./img/remera-violeta.jpg" alt="">
+                    <span class="precio">$20.000</span>
+                </article>
+                <article class="contenedor-detalle">
+                   <h3 class="nombre-detalle-producto">Camiseta Urbana</h3>
+                   <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, nisi. Soluta eligendi eum deserunt saepe nobis harum mollitia, quia repellendus et voluptas ipsa porro sint perspiciatis, fuga in nemo nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem cumque nihil alias sunt aspernatur numquam repellat in, molestias similique culpa nostrum delectus, iusto inventore, minus facere! At non officia perferendis.
+                   </p>
             </article>
-
-            <article class="item">
-                <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
-            </article>
-
-            <article class="item">
-                <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
-            </article>
-
-            <article class="item">
-                <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
-            </article>
-        </section>
-        </section>
-
-        <section >
-            <h2>Categorias</h2>
-            <section>
-            <article class="categorias">
-                <a class = "imagenCategoria" href="">
-                    <img  src="./img/categorias-camisetas.jpg" alt="">
-                    <p>Camisetas</p>
-                </a>
-                <a class = "imagenCategoria" href="">
-                    <img  src="./img/camiseta-titular.jpg" alt="">
-                    <p>Pantalones</p>
-                </a>
-                <a class = "imagenCategoria" href="">
-                    <img  src="./img/camperas.png" alt="">
-                    <p>Camperas</p>
-                </a>
-                <a class = "imagenCategoria" href="">
-                    <img  src="./img/gorras.jpg" alt="">
-                    <p>Gorras</p>
-                </a>
-            </article>
-            </section>
         </section>
 
         <section>
-            <h2>Formas de Pago</h2>
-            <section >
-            <article class="formasPago">
-                <a href=""><img src="./img/visa_pago_final.png" alt=""></a>
-                <a href=""><img src="./img/mastercard.png" alt=""></a>
-                <a href=""><img src="./img/maestro.png" alt=""></a>
-                <a href=""><img src="./img/cabal.png" alt=""></a>
+            <h2 class="productos-similares-titulo" >Productos Similares</h2>
+            <section class="productos-similares">
+            <article class="item">
+                <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
+                <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
             </article>
-        </section>
+
+            <article class="item">
+                <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
+                <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
+            </article>
+
+            <article class="item">
+                <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
+                <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
+            </article>
         </section>
 
     </main>
