--- a/categorias.html
+++ b/categorias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Shortcut Icon" type="image/png" href="/img/new_logo_sacachispasfc.png">
+    <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -17,7 +17,7 @@
         <div class="portada">
             <div class="contenedorEncabezado">
                 <article class="logoContenedor">
-                    <a href="index.html"><img class="logo" src="/img/new_logo_sacachispasfc.png" alt=""></a>
+                    <a href="index.html"><img class="logo" src="./img/new_logo_sacachispasfc.png" alt=""></a>
                 </article>
 
                 <article class="buscador">
@@ -37,7 +37,7 @@
                 <nav class="nav-list">
                     <ul>
                         <li class="botonesNav"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="botonesNav" id="activo"><a href="categorias.html" class="nav-link">Categorias</a></li>
+                        <li class="botonesNav"><a href="categorias.html" class="nav-link">Categorias</a></li>
                         <li class="botonesNav"><a href="contacto.html" class="nav-link">Contacto</a></li>
                         <li class="botonesNav"><a href="micuenta.html" class="nav-link">Mi cuenta</a></li>
                     </ul>
@@ -48,33 +48,35 @@
 
     <main>
 
+        <h1> Categorías </h1>
+
         <section class="cuadricula">
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
             <article class="categoria-cuadricula">
-                <img src="img/camiseta-suplente.jpg" alt="categoria">
+                <img src="./img/camiseta-suplente.jpg" alt="categoria">
             </article>
         </section>
 
