--- a/categorias.html
+++ b/categorias.html
@@ -52,31 +52,58 @@
 
         <section class="cuadricula">
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <p class="categoria-centrado">Camisetas </p> 
+                </a>
             </article>
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <span class="categoria-centrado">Camisetas</span>
+                </a>
             </article>
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <span class="categoria-centrado">Camisetas</span>
+                </a>
             </article>
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <span class="categoria-centrado">Camisetas</span>
+                </a>
             </article>
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <span class="categoria-centrado">Camisetas</span>
+                </a>
             </article>
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <span class="categoria-centrado">Camisetas</span>
+                </a>
             </article>
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <span class="categoria-centrado">Camisetas</span>
+                </a>
             </article>
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <span class="categoria-centrado">Camisetas</span>
+                </a>
             </article>
             <article class="categoria-cuadricula">
-                <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                <a href="">
+                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <span class="categoria-centrado">Camisetas</span>
+                </a>
             </article>
         </section>
 
