--- a/producto.html
+++ b/producto.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
     <title>Tienda Sacachispas Fútbol</title>
 </head>
+
 <body>
     <header>
         <div class="portada">
@@ -22,14 +25,14 @@
 
                 <article class="buscador">
                     <form action="#">
-                    <input id= "buscador" class="buscador-input" type="text" placeholder="Buscar productos">
+                        <input id="buscador" class="buscador-input" type="text" placeholder="Buscar productos">
                     </form>
                 </article>
 
                 <article class="carritoCompras">
                     <span class="material-symbols-outlined">
                         shopping_cart
-                        </span>
+                    </span>
                 </article>
             </div>
 
@@ -49,36 +52,53 @@
     <main>
 
         <section class="detalle-producto">
-                <article class="detalle-producto-item">
-                    <img src="./img/remera-violeta.jpg" alt="">
-                    <span class="precio">$20.000</span>
-                </article>
-                <article class="contenedor-detalle">
-                   <h3 class="nombre-detalle-producto">Camiseta Urbana</h3>
-                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, nisi. Soluta eligendi eum deserunt saepe nobis harum mollitia, quia repellendus et voluptas ipsa porro sint perspiciatis, fuga in nemo nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem cumque nihil alias sunt aspernatur numquam repellat in, molestias similique culpa nostrum delectus, iusto inventore, minus facere! At non officia perferendis.
-                   </p>
+            <article class="detalle-producto-item">
+                <img src="./img/remera-violeta.jpg" alt="">
+                <span class="precio">$20.000</span>
             </article>
+            <article class="contenedor-detalle">
+                <h3 class="nombre-detalle-producto">Camiseta Urbana</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, nisi. Soluta eligendi eum deserunt
+                    saepe nobis harum mollitia, quia repellendus et voluptas ipsa porro sint perspiciatis, fuga in nemo
+                    nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem cumque nihil alias sunt
+                    aspernatur numquam repellat in, molestias similique culpa nostrum delectus, iusto inventore, minus
+                    facere! At non officia perferendis.
+                </p>
+                <article class="section-agregar">
+                    <form action="">
+                        <input class="input-cantidad" type="number" name="cantidad" value="1" min="1" max="10" step="">
+                    </form>
+                    <button class="boton-agregar">Agregar <span><i class="fa-solid fa-cart-plus"></i></span></button>
+                </article>
+            </article>
+
         </section>
 
         <section>
-            <h2 class="productos-similares-titulo" >Productos Similares</h2>
+            <h2 class="productos-similares-titulo">Productos Similares</h2>
             <section class="productos-similares">
-            <article class="item">
-                <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
-                <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
-            </article>
+                <article class="item">
+                <a href="./producto.html">
+                        <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
+                    <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
+                </a>    
+                </article>
 
-            <article class="item">
-                <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
-                <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
-            </article>
+                <article class="item">
+                    <a href="./producto.html">
+                        <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
+                    <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
+                </a> 
+                </article>
 
-            <article class="item">
-                <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
-                <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
-            </article>
-        </section>
+                <article class="item">
+                    <a href="./producto.html">
+                        <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
+                    <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
+                </a> 
+                </article>
+            </section>
 
     </main>
 
@@ -88,7 +108,7 @@
                 <a href="index.html"></a>
                 <p>
                     <span class="material-symbols-outlined">
-                    schedule
+                        schedule
                     </span>
                     <br> Horarios:
                     <br> Lun. a Sáb. de 8 a 14hs.
@@ -118,4 +138,5 @@
         </section>
     </footer>
 </body>
+
 </html>
