--- a/login.html
+++ b/login.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
+    <title>Tienda Sacachispas Fútbol</title>
 </head>
 <body>
     
-    <div>
-        
+    <div class="contenedor_login">
+        <div class="contenedor_banner"><a href="index.html"><img class="bannerParaLogin" src="./img/new_logo_sacachispasfc.png" alt=""></a></div>
+        <form class="login_form" action="" method="post">
+
+        <div class="prueba"><label class="user_pass" for="usuario">Usuario:</label></div>
+        <input class="inputs_login" type="text" name="usuario" id="" placeholder="Ingrese usuario">
+
+        <label class="user_pass" for="contrasenia">Contraseña:</label>
+        <input class="inputs_login" type="password" name="contrasenia" id="" placeholder="Ingrese contraseña">
+        <a class="olvidaste" href="#">¿Olvidaste la contraseña?</a>
+        <div class="contenedor_boton"><input class="enviar_boton" type="submit" name="enviar" id="" value="LOGIN"></div>
+        <p class="sinCuenta">¿No tenés cuenta?&nbsp;<a href="#">Registrate</a></p>
+        </form>
     </div>
 
 </body>
