arreglo el footer y cositas

--- a/login.html
+++ b/login.html
@@ -13,16 +13,16 @@
     
     <div class="contenedor_login">
         <div class="contenedor_banner"><a href="index.html"><img class="bannerParaLogin" src="./img/new_logo_sacachispasfc.png" alt=""></a></div>
-        <form class="login_form" action="" method="post">
+        <form class="login_form" action="login.html" method="get">
 
-        <div class="prueba"><label class="user_pass" for="usuario">Usuario:</label></div>
+        <div><label class="user_pass" for="usuario">Usuario:</label></div>
         <input class="inputs_login" type="text" name="usuario" id="" placeholder="Ingrese usuario">
 
         <label class="user_pass" for="contrasenia">Contraseña:</label>
         <input class="inputs_login" type="password" name="contrasenia" id="" placeholder="Ingrese contraseña">
         <a class="olvidaste" href="#">¿Olvidaste la contraseña?</a>
         <div class="contenedor_boton"><input class="enviar_boton" type="submit" name="enviar" id="" value="LOGIN"></div>
-        <p class="sinCuenta">¿No tenés cuenta?&nbsp;<a href="#">Registrate</a></p>
+        <p class="sinCuenta">¿No tenés cuenta?&nbsp;<a class="registrate" href="registrate.html">Registrate</a></p>
         </form>
     </div>
 
