--- a/micuenta.html
+++ b/micuenta.html
@@ -121,36 +121,28 @@
     <footer>
         <section class="footer">
             <article class="logoFooter">
-                <a href="index.html"></a>
-                <p>
-                    <span class="material-symbols-outlined">
-                        schedule
-                    </span>
-                    <br> Horarios:
-                    <br> Lun. a Sáb. de 8 a 14hs.
-                    <br> y de 16 a 20hs.
-                </p>
+                <a class="logo_contenedor" href="index.html"><img class="logoDelFooter" src="./img/new_logo_sacachispasfc.png" alt=""></a>
             </article>
 
-            <article class="contenedorDatosGrupo">
-                <p class="datosGrupo">Datos del Grupo:</p>
-                <p>Pereira Vilches, Ailen <br> Guarnieri, Matias.</p>
+            <article class="contenedor_datosGrupo">
+                    <p class="datosGrupo">Datos del Grupo:</p>
+                    <p>Pereira Vilches, Ailen</p> 
+                    <p>Guarnieri, Matias</p>
             </article>
 
-            <article class="contenedorRedes">
-                <p class="redes">Seguinos en:</p>
-                <ul class="social-icons">
-                    <li>
+            <article class="contenedor_redes">
+                    <p class="redes">Seguinos en:</p>
+                    <div class="social-icons">
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                    </li>
-                    <li>
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    </li>
-                    <li>
                         <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                    </li>
-                </ul>
+                </div>
             </article>
+
+            <article class="horarios_contenedor">
+                <span class="material-symbols-outlined relojito">schedule</span>
+                <p class="horarios">Horarios: Lun. a Sáb. de 8 a 14hs. y de 16 a 20hs.</p>
+        </article>
         </section>
     </footer>
 </body>
