punto html/footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </article>
 
                 <article class="carritoCompras">
-                    <a href="/carrito.html"><span class="material-symbols-outlined">
+                    <a href="./carrito.html"><span class="material-symbols-outlined">
                         shopping_cart
                         </span></a>
                 </article>
