--- a/categorias.html
+++ b/categorias.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
     <title>Tienda Sacachispas Fútbol</title>
 </head>
+
 <body>
     <header>
         <div class="portada">
@@ -22,14 +25,14 @@
 
                 <article class="buscador">
                     <form action="#">
-                    <input id= "buscador" class="buscador-input" type="text" placeholder="Buscar productos">
+                        <input id="buscador" class="buscador-input" type="text" placeholder="Buscar productos">
                     </form>
                 </article>
 
                 <article class="carritoCompras">
                     <span class="material-symbols-outlined">
                         shopping_cart
-                        </span>
+                    </span>
                 </article>
             </div>
 
@@ -54,7 +57,7 @@
             <article class="categoria-cuadricula">
                 <a href="">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <p class="categoria-centrado">Camisetas </p> 
+                    <p class="categoria-centrado">Camisetas </p>
                 </a>
             </article>
             <article class="categoria-cuadricula">
@@ -113,37 +116,31 @@
     <footer>
         <section class="footer">
             <article class="logoFooter">
-                <a href="index.html"></a>
-                <p>
-                    <span class="material-symbols-outlined">
-                    schedule
-                    </span>
-                    <br> Horarios:
-                    <br> Lun. a Sáb. de 8 a 14hs.
-                    <br> y de 16 a 20hs.
-                </p>
+                <a class="logo_contenedor" href="index.html"><img class="logoDelFooter"
+                        src="./img/new_logo_sacachispasfc.png" alt=""></a>
             </article>
 
-            <article class="contenedorDatosGrupo">
+            <article class="contenedor_datosGrupo">
                 <p class="datosGrupo">Datos del Grupo:</p>
-                <p>Pereira Vilches, Ailen <br> Guarnieri, Matias.</p>
+                <p>Pereira Vilches, Ailen</p>
+                <p>Guarnieri, Matias</p>
             </article>
 
-            <article class="contenedorRedes">
+            <article class="contenedor_redes">
                 <p class="redes">Seguinos en:</p>
-                <ul class="social-icons">
-                    <li>
-                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                    </li>
-                </ul>
+                <div class="social-icons">
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                </div>
+            </article>
+
+            <article class="horarios_contenedor">
+                <span class="material-symbols-outlined relojito">schedule</span>
+                <p class="horarios">Horarios: Lun. a Sáb. de 8 a 14hs. y de 16 a 20hs.</p>
             </article>
         </section>
     </footer>
 </body>
+
 </html>
