--- a/camisetas.html
+++ b/camisetas.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
-    <title>Tienda Sacachispas Fútbol</title>
+    <title>Camisetas - Tienda Sacachispas Fútbol</title>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
                 </article>
 
                 <article class="carritoCompras">
-                    <span class="material-symbols-outlined">
+                    <a href="./carrito.html"><span class="material-symbols-outlined">
                         shopping_cart
-                    </span>
+                        </span></a>
                 </article>
             </div>
 
@@ -63,7 +63,7 @@
                                 <form action="">
                                 <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                                 </form>
-                                <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                                <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                             </div>
                         </article>
                 </section>
@@ -78,7 +78,7 @@
                         <form action="">
                         <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                         </form>
-                        <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                     </div>
                 </article>
             </section>
@@ -93,7 +93,7 @@
                         <form action="">
                         <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                         </form>
-                        <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                     </div>
                 </article>
             </section>
@@ -108,7 +108,7 @@
                         <form action="">
                         <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                         </form>
-                        <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                     </div>
                 </article>
             </section>
@@ -123,7 +123,7 @@
                         <form action="">
                         <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                         </form>
-                        <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                     </div>
                 </article>
             </section>
@@ -138,7 +138,7 @@
                         <form action="">
                         <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                         </form>
-                        <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                     </div>
                 </article>
             </section>
@@ -153,7 +153,7 @@
                         <form action="">
                         <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                         </form>
-                        <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                     </div>
                 </article>
             </section>
@@ -168,7 +168,7 @@
                         <form action="">
                         <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                         </form>
-                        <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                     </div>
                 </article>
             </section>
@@ -183,7 +183,7 @@
                         <form action="">
                         <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
                         </form>
-                        <button class="boton-agregarCamisetas">Agregar<span><i class="fa-solid fa-cart-plus"></i></span></button>
+                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
                     </div>
                 </article>
             </section>
