--- a/categorias.html
+++ b/categorias.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
-    <title>Tienda Sacachispas Fútbol</title>
+    <title>Categorías - Tienda Sacachispas Fútbol</title>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
                 </article>
 
                 <article class="carritoCompras">
-                    <span class="material-symbols-outlined">
+                    <a href="./carrito.html"><span class="material-symbols-outlined">
                         shopping_cart
-                    </span>
+                        </span></a>
                 </article>
             </div>
 
@@ -40,7 +40,7 @@
                 <nav class="nav-list">
                     <ul>
                         <li class="botonesNav"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="botonesNav"><a href="categorias.html" class="nav-link">Categorias</a></li>
+                        <li class="botonesNav "><a href="categorias.html" class="activo">Categorias</a></li>
                         <li class="botonesNav"><a href="contacto.html" class="nav-link">Contacto</a></li>
                         <li class="botonesNav"><a href="micuenta.html" class="nav-link">Mi cuenta</a></li>
                     </ul>
@@ -55,55 +55,55 @@
 
         <section class="cuadricula">
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <p class="categoria-centrado">Camisetas </p>
                 </a>
             </article>
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
-                <a href="">
+                <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
