--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
-    <title>Tienda Sacachispas Fútbol</title>
+    <title>Contacto - Tienda Sacachispas Fútbol</title>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
                 </article>
 
                 <article class="carritoCompras">
-                    <span class="material-symbols-outlined">
+                    <a href="./carrito.html"><span class="material-symbols-outlined">
                         shopping_cart
-                    </span>
+                        </span></a>
                 </article>
             </div>
 
@@ -41,7 +41,7 @@
                     <ul>
                         <li class="botonesNav"><a href="index.html" class="nav-link">Home</a></li>
                         <li class="botonesNav"><a href="categorias.html" class="nav-link">Categorias</a></li>
-                        <li class="botonesNav"><a href="contacto.html" class="nav-link">Contacto</a></li>
+                        <li class="botonesNav"><a href="contacto.html" class="activo">Contacto</a></li>
                         <li class="botonesNav"><a href="micuenta.html" class="nav-link">Mi cuenta</a></li>
                     </ul>
                 </nav>
@@ -50,7 +50,7 @@
     </header>
 
     <main>
-        <h2 class="titulo-contacto">Contacto</h2>
+        <h1 class="titulo-contacto">Contacto</h1>
         <section class="contenedor-contacto">    
             <article class="formulario-contacto">
                 <form action="#" method="post">
