--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
-    <title>Tienda Sacachispas Fútbol</title>
+    <title>Iniciar sesión - Tienda Sacachispas Fútbol</title>
 </head>
 <body>
     
