--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="nav">
                 <nav class="nav-list">
                     <ul>
-                        <li class="botonesNav"><a href="index.html" class="nav-link">Home</a></li>
+                        <li class="botonesNav"><a href="index.html" class="activo">Home</a></li>
                         <li class="botonesNav"><a href="categorias.html" class="nav-link">Categorias</a></li>
                         <li class="botonesNav"><a href="contacto.html" class="nav-link">Contacto</a></li>
                         <li class="botonesNav"><a href="micuenta.html" class="nav-link">Mi cuenta</a></li>
