--- a/micuenta.html
+++ b/micuenta.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
-    <title>Tienda Sacachispas Fútbol</title>
+    <title>Mi cuenta - Tienda Sacachispas Fútbol</title>
 </head>
 
 <body>
@@ -31,9 +31,9 @@
                 </article>
 
                 <article class="carritoCompras">
-                    <span class="material-symbols-outlined">
+                    <a href="./carrito.html"><span class="material-symbols-outlined">
                         shopping_cart
-                    </span>
+                        </span></a>
                 </article>
             </div>
 
@@ -43,7 +43,7 @@
                         <li class="botonesNav"><a href="index.html" class="nav-link">Home</a></li>
                         <li class="botonesNav"><a href="categorias.html" class="nav-link">Categorias</a></li>
                         <li class="botonesNav"><a href="contacto.html" class="nav-link">Contacto</a></li>
-                        <li class="botonesNav"><a href="micuenta.html" class="nav-link">Mi cuenta</a></li>
+                        <li class="botonesNav"><a href="micuenta.html" class="activo">Mi cuenta</a></li>
                     </ul>
                 </nav>
             </div>
