--- a/producto.html
+++ b/producto.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
-    <title>Tienda Sacachispas Fútbol</title>
+    <title>Producto - Tienda Sacachispas Fútbol</title>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
                 </article>
 
                 <article class="carritoCompras">
-                    <span class="material-symbols-outlined">
+                    <a href="./carrito.html"><span class="material-symbols-outlined">
                         shopping_cart
-                    </span>
+                        </span></a>
                 </article>
             </div>
 
