--- a/login.html
+++ b/login.html
@@ -23,6 +23,7 @@
         <a class="olvidaste" href="#">¿Olvidaste la contraseña?</a>
         <div class="contenedor_boton"><input class="enviar_boton" type="submit" name="enviar" id="" value="LOGIN"></div>
         <p class="sinCuenta">¿No tenés cuenta?&nbsp;<a class="registrate" href="registrate.html">Registrate</a></p>
+        <p class="sinCuenta"><a class="registrate" href="index.html">Volver al inicio</a></p>
         </form>
     </div>
 
