--- a/registrate.html
+++ b/registrate.html
@@ -40,6 +40,7 @@
         <!-- Boton Guardar -->
         <div class="contenedor_botonGuardar"><input class="enviar_boton" type="submit" name="enviar" id="" value="Guardar"></div>
 
+        <p class="sinCuenta"><a class="registrate" href="index.html">Volver al inicio</a></p>
         </form>
     </div>
 
