--- a/categorias.html
+++ b/categorias.html
@@ -30,9 +30,8 @@
                 </article>
 
                 <article class="carritoCompras">
-                    <a href="./carrito.html"><span class="material-symbols-outlined">
-                        shopping_cart
-                        </span></a>
+                    <a href="./carrito.html"><i class="fa-solid fa-cart-shopping botonCarrito"></i></a>
+                    <a href="login.html"><i class="fa-regular fa-user botonUsuario"></i></a>
                 </article>
             </div>
 
