--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
                 </article>
 
                 <article class="carritoCompras">
-                    <a href="./carrito.html"><span class="material-symbols-outlined">
-                        shopping_cart
-                        </span></a>
+                    <a href="./carrito.html"><i class="fa-solid fa-cart-shopping botonCarrito"></i></a>
+                    <a href="login.html"><i class="fa-regular fa-user botonUsuario"></i></a>
                 </article>
             </div>
 
@@ -56,31 +55,36 @@
             <h1>¡Bienvenidos a Tienda Sacachispas Fútbol!</h1>
             <section class="productos">
             <article class="item">
-                <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+                <a href="producto.html">
+                    <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
+                    <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
+                    <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
+                    <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+                </a>
             </article>
-
             <article class="item">
-                <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+                <a href="producto.html">
+                    <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
+                    <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
+                    <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
+                    <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+                </a>
             </article>
-
             <article class="item">
-                <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+                <a href="producto.html">
+                    <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
+                    <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
+                    <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
+                    <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+                </a>
             </article>
-
             <article class="item">
-                <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+                <a href="producto.html">
+                    <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
+                    <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
+                    <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
+                    <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
+                </a>
             </article>
         </section>
         </section>
@@ -89,19 +93,19 @@
             <h2>Categorias</h2>
             <section>
             <article class="categorias">
-                <a class = "imagenCategoria" href="">
+                <a class = "imagenCategoria" href="categorias.html">
                     <img  src="./img/categorias-camisetas.jpg" alt="">
                     <p>Camisetas</p>
                 </a>
-                <a class = "imagenCategoria" href="">
+                <a class = "imagenCategoria" href="categorias.html">
                     <img  src="./img/camiseta-titular.jpg" alt="">
                     <p>Pantalones</p>
                 </a>
-                <a class = "imagenCategoria" href="">
+                <a class = "imagenCategoria" href="categorias.html">
                     <img  src="./img/camperas.png" alt="">
                     <p>Camperas</p>
                 </a>
-                <a class = "imagenCategoria" href="">
+                <a class = "imagenCategoria" href="categorias.html">
                     <img  src="./img/gorras.jpg" alt="">
                     <p>Gorras</p>
                 </a>
